# redtools

./: README.md  requirements.txt  setup.cfg  setup.py
redtools/: generateCNPJ.py
src/redtools/: GenerateData.py  RedPlayer.py  __init__.py  data.py  functions.py  player.py
src/redtools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/redtools/redtools.egg-info/: PKG-INFO
