[metadata]
name = redtools
version = 0.0.1
author = Vinicius Calil
author_email = v.calil@hotmail.com
description = Ferramenta para automacoes de acoes do redteam
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vcalil/redtools
project_urls =
    Bug Tracker = https://github.com/vcalil/redtools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = redtools
